fix: change dark mode colors

--- a/src/assets/styles/components/_avatar.scss
+++ b/src/assets/styles/components/_avatar.scss
@@ -209,3 +209,11 @@
     }
   }
 }
+
+[data-theme="dark"] {
+  .avatar {
+    &--default {
+      color: var(--white);
+    }
+  }
+}
