--- a/src/assets/styles/components/_divider.scss
+++ b/src/assets/styles/components/_divider.scss
@@ -43,7 +43,7 @@
 
 [data-theme="dark"] {
     .divider {
-        --ds-divider-bg-color: var(--grey-40);
+        --ds-divider-bg-color: var(--color-5);
         --ds-divider-bg-color-grey: var(--grey-50);
     }
 }
