--- a/src/assets/styles/components/_tab.scss
+++ b/src/assets/styles/components/_tab.scss
@@ -151,26 +151,27 @@
   }
 }
 
-[data-theme="dark"] {
+body[data-theme="dark"] {
   .tab {
-    $this: &;
-
     &__label {
       color: var(--grey-50);
     }
+
     &--selected {
       color: var(--grey-100);
+
       &:hover {
-        #{$this}__label {
+        .tab__label {
           color: var(--grey-900);
         }
       }
 
-      #{$this}__label {
-        color: var(--grey-400);
+      .tab__label {
+        color: var(--grey-800);
       }
     }
   }
+
   .tabs-container {
     width: 100%;
     display: flex;
